# pit

./: .gitignore  BUILD_SPEC.md  CLAUDE.md  LICENSE  PHASE5.md  PUBLISH.md  README.md  SKILL.md  capture_screenshots.py  pit-dashboard.py  pyproject.toml  requirements-streamlit.txt  test_dashboard.py  twitter-thread.txt
.streamlit/: config.toml
assets/: screenshot-list.html  screenshot-menu.html  screenshot-menu.txt
pit/: __init__.py  config.py
pit/cli/: __init__.py  formatters.py  main.py
pit/cli/commands/: ab_test.py  bisect.py  bundle.py  deps.py  export_import.py  hooks.py  init.py  optimize.py  patch.py  prompt.py  replay.py  scan.py  stash.py  stats.py  test.py  tree.py  version.py  worktree.py
pit/core/: __init__.py  bisect.py  bundle.py  dependencies.py  hooks.py  optimizer.py  patch.py  query.py  replay.py  security.py  semantic_diff.py  semantic_merge.py  stash.py  worktree.py
pit/core/llm/: __init__.py  provider.py
pit/db/: __init__.py  database.py  models.py  repository.py
pit/integrations/: __init__.py
tests/: __init__.py  conftest.py
tests/test_cli/: test_bisect.py  test_bundle.py  test_commands.py  test_deps.py  test_hooks.py  test_patch.py  test_replay.py  test_stash.py  test_version.py  test_worktree.py
tests/test_core/: test_optimizer.py  test_query.py  test_security.py  test_semantic_diff.py  test_semantic_merge.py
tests/test_db/: test_models.py  test_repository.py
